--- a/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         DataContext="{Binding Ninjas, Source={StaticResource Locator}}">
     <StackPanel>
         <TextBlock>Ninja's</TextBlock>
-        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja, Mode=TwoWay}">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja, Mode=TwoWay , UpdateSourceTrigger=LostFocus}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
                 <DataGridTextColumn Header="Gold" Binding="{Binding Gold}" Width="*" />
@@ -17,5 +17,6 @@
         </DataGrid>
         <Button Command="{Binding ShowAddNinja}" Content="Add" />
         <Button Command="{Binding ShowEditNinja}" Content="Edit" />
+        <Button Content="Delete"  Command="{Binding DeleteNinjaCommand}"/>
     </StackPanel>
 </Window>
