--- a/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         DataContext="{Binding Ninjas, Source={StaticResource Locator}}">
     <StackPanel>
         <TextBlock>Ninja's</TextBlock>
-        <DataGrid IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja, Mode=TwoWay , UpdateSourceTrigger=LostFocus}">
+        <DataGrid IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
                 <DataGridTextColumn Header="Gold" Binding="{Binding Gold}" Width="*" />
@@ -18,6 +18,6 @@
         <Button Command="{Binding ShowAddNinja}" Content="Add" />
         <Button Command="{Binding ShowEditNinja}" Content="Edit" />
         <Button Content="Delete"  Command="{Binding DeleteNinjaCommand}"/>
-        <Button Command="{Binding ShowNinjaInfo}" Content="Log in"/>
+        <Button Command="{Binding LogIn}" Content="Log in"/>
     </StackPanel>
 </Window>
