--- a/LeagueOfNinjas/LeagueOfNinjas/Views/NinjaInfoWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/NinjaInfoWindow.xaml
@@ -15,9 +15,12 @@
         <Label Content="{Binding SelectedNinja.Gold}"></Label>
         
         <Label>Statistics</Label>
-        <Label Content="{Binding SelectedNinja.Gold}"></Label>
-        <Label Content="{Binding SelectedNinja.Gold}"></Label>
-        <Label Content="{Binding SelectedNinja.Gold}"></Label>
+        <Label>Strength</Label>
+        <Label Content="{Binding Strength}"></Label>
+        <Label>Intelligence</Label>
+        <Label Content="{Binding Intelligence}"></Label>
+        <Label>Agility</Label>
+        <Label Content="{Binding Agility}"></Label>
         
         <Button Content="Open Inventory"/>
         <Button Content="Go to shop"/>
