--- a/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         DataContext="{Binding Ninjas, Source={StaticResource Locator}}">
     <StackPanel>
         <TextBlock>Ninja's</TextBlock>
-        <DataGrid IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}">
+        <DataGrid IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
                 <DataGridTextColumn Header="Gold" Binding="{Binding Gold}" Width="*" />
