--- a/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeagueOfNinjas.Views"
         mc:Ignorable="d"
-        Title="ShopWindow" Height="300" Width="339.512"
+        Title="ShopWindow" Height="300" Width="407.512"
          DataContext="{Binding Shop, Source={StaticResource Locator}}">
     <StackPanel>
         <TextBlock>Items</TextBlock>
         <DataGrid IsReadOnly="True" AutoGenerateColumns="False" SelectedItem="{Binding SelectedItem}" ItemsSource="{Binding ShopItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="" />
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="" />
-                <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="" />
-                <DataGridTextColumn Header="Strength" Binding="{Binding Strength,Mode=TwoWay}" Width="" />
-                <DataGridTextColumn Header="Agility" Binding="{Binding Agility}" Width="" />
-                <DataGridTextColumn Header="Intelligence" Binding="{Binding Intelligence}" Width="" />
+                <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="*" />
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
+                <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="*" />
+                <DataGridTextColumn Header="Strength" Binding="{Binding Strength,Mode=TwoWay}" Width="*" />
+                <DataGridTextColumn Header="Agility" Binding="{Binding Agility}" Width="*" />
+                <DataGridTextColumn Header="Intelligence" Binding="{Binding Intelligence}" Width="*" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Command="{Binding BuyItemCommand}" Content="Buy Item"/>
+        <Button Command="{Binding BuyItem}" Content="Buy Item"/>
     </StackPanel>
 </Window>
