--- a/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeagueOfNinjas"
         mc:Ignorable="d"
-        Title="Ninja list" Height="350" Width="525"
+        Title="Ninja list" SizeToContent="WidthAndHeight" 
         DataContext="{Binding Ninjas, Source={StaticResource Locator}}">
     <StackPanel>
         <TextBlock>Ninja's</TextBlock>
         <DataGrid IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Ninjas}" SelectedItem="{Binding SelectedNinja}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
-                <DataGridTextColumn Header="Gold" Binding="{Binding Gold}" Width="*" />
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
+                <DataGridTextColumn Header="Gold" Binding="{Binding Gold}" />
             </DataGrid.Columns>
         </DataGrid>
         <Button Command="{Binding ShowAddNinja}" Content="Add" />
