--- a/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
@@ -43,7 +43,7 @@
 
             <StackPanel Orientation="Vertical">
 
-                <Button Command="{Binding BuyItem}" Content="Buy Item"/>
+                <Button Command="{Binding BuyItemCommand}" Content="Buy Item"/>
                 <Button Command="{Binding ShowAddItemCommand}" Content="Add Item"/>
                 <Button Command="{Binding DeleteItemCommand}" Content="Delete Item"/>
                 <Button Command="{Binding EditItem}" Content="Edit item"/>
